# fastapi-sqlmodel-alembic

./: .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  test_main.py
migrations/: env.py
migrations/versions/: 13fd454ce76c_init.py
