[project]
name = "rehash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.120.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pytest>=9.0.1",
]
